<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.applysolutions.mymediandroid.AboutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true">

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_label"
            android:focusableInTouchMode="false"/>

        <TextView
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_name"
            style="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_label"
            android:focusableInTouchMode="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_label"
                android:id="@+id/textView2" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.2.0"
                android:id="@+id/textViewVersion" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kontakt_label" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="22sp"
            android:inputType="textEmailAddress"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/support_mail" />

        <TextView
            android:layout_marginTop="10dp"
            android:inputType="textUri"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/website_url" />

    </LinearLayout>

</RelativeLayout>
